--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,52 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+$custom-typography: mat-typography-config($font-family: '"Jura", sans-serif;');
+@include mat-core($custom-typography);
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$Corona-Timer-primary: mat-palette($mat-teal);
+$Corona-Timer-accent: mat-palette($mat-amber, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$Corona-Timer-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$Corona-Timer-theme: mat-light-theme((
+  color: (
+    primary: $Corona-Timer-primary,
+    accent: $Corona-Timer-accent,
+    warn: $Corona-Timer-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($Corona-Timer-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+.pointer{
+  cursor: pointer;
+}
+.full-width{
+  width: 100%;
+}
+.action-button{
+  cursor: pointer;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Jura, Roboto, "Helvetica Neue", sans-serif; }
